feature: add style to the submit input

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 </head>
 
 <body>
-  <section>
-    <header>
+  <section class="header-container">
+    <header class="main-container">
       <h1>Mentoring</h1>
       <p>Fill out the form below to schedule your mentorship</p>
     </header>
   </section>
 
   <main>
-    <div>
+    <div class="main-container">
       <form action="/" method="get">
         <div class="form-wrapper">
           <fieldset>
